--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -9,14 +9,14 @@
 
 <header>
   <app-navbar></app-navbar>
-   
+
 </header>
 
 <body>
     <div class="row pt-5 mt-5 mr-5 ml-5 d-flex justify-content-center row-eq-height">
-        
+
         <!-- Eventos (material angular) -->
-        
+
   <div class="bottomLine">
     <div class="topbottomLine pt-2 pb-2 mb-4 text-center" id="home">
       <div class="container">
@@ -27,44 +27,50 @@
           </div>
       </div>
     </div>
-     
+
     <div class="card-group-row">
       <div class="card-group-col">
         <!--IEEExtreme-->
-        <mat-card class="event-card">
-          <div class="image-with-text">
-            <img mat-card-img src="https://i.ibb.co/YNBZxNs/ieee-extreme.jpg" alt="Foto de competicion IEEExtreme" class="event-card-img ieeextreme-filter"/>
-            <p class="text-on-image ieeextreme-text">{{ 'HOME.IEEEXTREME.TITLE' | translate }}</p>
-          </div>
-          <mat-card-content class="mt-2">
-            <mat-card-title>{{ 'HOME.IEEEXTREME.TITLE' | translate }}</mat-card-title>
-            <p class="lead">{{ 'HOME.IEEEXTREME.TEXT' | translate }}</p>
-            <a class="link-text" [routerLink]="['/ieeextreme']">
-              <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
-                <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
-              </h5>
-            </a>
-          </mat-card-content>
-        </mat-card>
+        <a  [routerLink]="['/ieeextreme']">
+          <mat-card class="event-card">
+            <div class="image-with-text">
+              <img mat-card-img src="https://i.ibb.co/YNBZxNs/ieee-extreme.jpg" alt="Foto de competicion IEEExtreme" class="event-card-img ieeextreme-filter"/>
+              <p class="text-on-image ieeextreme-text">{{ 'HOME.IEEEXTREME.TITLE' | translate }}</p>
+            </div>
+            <mat-card-content class="mt-2">
+              <mat-card-title>{{ 'HOME.IEEEXTREME.TITLE' | translate }}</mat-card-title>
+              <p class="lead">{{ 'HOME.IEEEXTREME.TEXT' | translate }}</p>
+              <a class="link-text" [routerLink]="['/ieeextreme']">
+                <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
+                  <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
+                </h5>
+              </a>
+            </mat-card-content>
+          </mat-card>
+        </a>
+
       </div>
 
       <div class="card-group-col">
         <!--Clases de Pyhton-->
-        <mat-card class="event-card">
-          <div class="image-with-text">
-            <img mat-card-img src="https://i.ibb.co/q1QyW01/cursopython.jpg" alt="Foto de los cursos de Python" class="event-card-img cursopython-filter"/>
-            <p class="text-on-image cursopython-text">{{ 'HOME.CLASSES.TITLE' | translate }}</p>
-          </div>
-          <mat-card-content class="mt-2">
-            <mat-card-title>{{ 'HOME.CLASSES.TITLE' | translate }}</mat-card-title>
-            <p class="lead">{{ 'HOME.CLASSES.TEXT' | translate }}</p>
-            <a class="link-text" [routerLink]="['/cursospython']">
-              <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
-                <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
-              </h5>
-            </a>
-          </mat-card-content>
-        </mat-card>
+        <a [routerLink]="['/cursospython']">
+          <mat-card class="event-card">
+            <div class="image-with-text">
+              <img mat-card-img src="https://i.ibb.co/q1QyW01/cursopython.jpg" alt="Foto de los cursos de Python" class="event-card-img cursopython-filter"/>
+              <p class="text-on-image cursopython-text">{{ 'HOME.CLASSES.TITLE' | translate }}</p>
+            </div>
+            <mat-card-content class="mt-2">
+              <mat-card-title>{{ 'HOME.CLASSES.TITLE' | translate }}</mat-card-title>
+              <p class="lead">{{ 'HOME.CLASSES.TEXT' | translate }}</p>
+              <a class="link-text" [routerLink]="['/cursospython']">
+                <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
+                  <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
+                </h5>
+              </a>
+            </mat-card-content>
+          </mat-card>
+        </a>
+
       </div>
 
     </div>
