--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -127,7 +127,7 @@
     </div>
   </div>
 
- 
+
 
   <div *ngIf="false">
     <!-- Iniciativas -->
@@ -232,17 +232,17 @@
 
       <div class="container">
         <div class="row">
-            <div class="col-sm">
-                <img src="assets/image/sponsors/jpmorgan.png" height="70vmin" alt="Logo Innovid"
-                    style="position: relative; top: 50%; transform: translateY(-50%);">
-            </div>
-            <div class="col-sm">
+            <div class="col-sm sponsors">
                 <img src="assets/image/sponsors/innovid.png" height="35vmin" alt="Logo Innovid"
                     style="position: relative; top: 50%; transform: translateY(-50%);">
             </div>
-            <div class="col-sm">
-                <img src="assets/image/sponsors/eiwa.png" height="180vmin" alt="Logo Eiwa"
+            <div class="col-sm sponsors">
+                <img src="assets/image/sponsors/jpmorgan.png" height="70vmin" alt="Logo JP Morgan"
                     style="position: relative; top: 50%; transform: translateY(-50%);">
+            </div>
+            <div class="col-sm sponsors">
+              <img src="./../../assets/image/sponsors/eiwa.png" height="85vmin" alt="Logo Eiwa"
+                style="position: relative; top: 50%; transform: translateY(-50%);">
             </div>
         </div>
       </div>
