--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -13,11 +13,13 @@
 
 <body>
 
-    <div class="topbottomLine pt-2 pb-2 mb-4" id="home">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm pt-1 pb-1" >
-                    <h1 class="page-title">{{ 'NAVBAR.TEAM' | translate }}</h1>
+    <div class="containerTitle">
+        <div class="topbottomLine pt-2 pb-2 mb-4 text-center" id="home">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm pt-1 pb-1" >
+                        <h1 class="page-title">{{ 'NAVBAR.TEAM' | translate }}</h1>
+                    </div>
                 </div>
             </div>
         </div>
@@ -71,7 +73,7 @@
                         <app-team-card type="IT_2021"></app-team-card>
 
                     </mat-expansion-panel>
-                    
+
                     <!-- Educacion -->
                     <mat-expansion-panel class="mat-elevation-z0">
                         <mat-expansion-panel-header>
@@ -109,7 +111,7 @@
 
                     </mat-expansion-panel>
 
-                    
+
 
 
                     <br><br>
@@ -217,7 +219,7 @@
 
                     </mat-expansion-panel>
 
-                    
+
 
                     <br><br>
 
