--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -13,7 +13,7 @@
 </header>
 
 <body>
-    <div class="row pt-5 mt-5 mr-5 ml-5 d-flex justify-content-center row-eq-height">
+    <div class="row mr-5 ml-5 d-flex justify-content-center row-eq-height">
 
         <!-- Eventos (material angular) -->
 
