--- a/src/app/noticias/noticias.component.css
+++ b/src/app/noticias/noticias.component.css
@@ -10,6 +10,7 @@ body {
     background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
     background-size: cover;
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    padding-top: 160px;
 }
 
 .topbottomLine {
