--- a/src/app/sponsors/sponsors.component.html
+++ b/src/app/sponsors/sponsors.component.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <div class="topbottomLine pt-2 pb-2 mb-4" id="home">
+    <div class="topbottomLine pb-2 mb-5" id="home">
         <div class="container">
             <div class="row">
                 <div class="col-sm pt-1 pb-1" >
@@ -22,7 +22,7 @@
         </div>
     </div>
 
-    <mat-tab-group class="mt-4">
+    <mat-tab-group class="mt-5 group-margin">
         <mat-tab label="2020">
             <div class="bottomLine">
                 <div class="container">
