--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -13,17 +13,20 @@
 
 <body>
 
-    <div class="containerTitle">
-        <div class="topbottomLine pt-2 pb-2 mb-4 text-center" id="home">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm pt-1 pb-1" >
-                        <h1 class="page-title">{{ 'NAVBAR.TEAM' | translate }}</h1>
+    <div class="d-flex align-items-center justify-content-center">
+        <div class="containerTitle">
+            <div class="topbottomLine pt-2 pb-2 mb-4 text-center" id="home">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm pt-1 pb-1" >
+                            <h1 class="page-title">{{ 'NAVBAR.TEAM' | translate }}</h1>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    
 
     <div class="mt-5 mr-5 ml-5">
 
@@ -194,34 +197,6 @@
 
 
                     <br><br>
-
-
-                    <!-- WIE -->
-                    <mat-expansion-panel class="mat-elevation-z0">
-                        <mat-expansion-panel-header>
-                            <mat-panel-title id="colorWie">
-                                Women In Engineering
-                            </mat-panel-title>
-                        </mat-expansion-panel-header>
-
-                        <app-team-card type="WIE"></app-team-card>
-                        <app-team-card type="WIE2"></app-team-card>
-                        <app-team-card type="WIE3"></app-team-card>
-
-                    </mat-expansion-panel>
-
-                    <!-- CS -->
-                    <mat-expansion-panel class="mat-elevation-z0">
-                        <mat-expansion-panel-header>
-                            <mat-panel-title id="colorCS">
-                                Computer Society
-                            </mat-panel-title>
-                        </mat-expansion-panel-header>
-
-                        <app-team-card type="CS"></app-team-card>
-                        <app-team-card type="CS2"></app-team-card>
-
-                    </mat-expansion-panel>
 
                 </mat-accordion>
 
