--- a/src/app/sponsors/sponsors.component.css
+++ b/src/app/sponsors/sponsors.component.css
@@ -9,12 +9,17 @@ body {
     background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
     background-size: cover;
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    padding-top: 160px;
 }
 
 .whiteRoundedBlock{
     background-color: whitesmoke;
     padding: 3%;
     border-radius: 5vmin;
+}
+
+.group-margin{
+    margin-top: 7rem !important;
 }
 
 .topbottomLine { 
