--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -4,13 +4,12 @@ html {
 }
 
 body {
-    font-size: 3vmin;
     padding: 10%;
-    background: rgb(10,27,103);
-    background: linear-gradient(75deg, rgba(10,27,103,1) 0%, rgba(92,37,186,1) 50%, rgba(59,173,217,1) 100%) no-repeat center center fixed;
+    background: rgb(255, 255, 255);
+    background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
     background-size: cover;
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
-    color: whitesmoke;
+	padding-top: 160px;
 }
 
 h1{
@@ -20,6 +19,7 @@ h1{
 h3{
     font-size: 15pt;
     text-align: center;
+    color: whitesmoke;
 }
 
 hr {
@@ -44,7 +44,7 @@ a:hover{
     width: fit-content;
     margin-left: auto;
     margin-right: auto;
-    background-color: rgba(245, 245, 245, 0.3);
+    background-color:#0d47a1;
     border-radius: 5vmin;
 }
 
@@ -86,4 +86,16 @@ button:hover {
     font-size: 13pt;
     font-weight: 100;
     text-align: right;
+}
+
+.topbottomLine { 
+    border-top:#0d47a1 2px solid;
+    border-bottom: #0d47a1 2px solid;
+    vertical-align: middle;
+    align-content: center;
+}
+
+.page-title {
+    color: #0d47a1;
+    font-size: 2.5em
 }
