--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -26,38 +26,35 @@ hr {
     border-color: whitesmoke;
 }
 
-a{
-    color: whitesmoke;
+a{ 
     font-weight: 100;
 }
 
 a:any-link{
-    color: whitesmoke;
+    color: rgb(20, 82, 255);
 }
 
 a:hover{
-    color: rgb(138, 169, 255);
+    color: rgb(98, 136, 238);
 }
 
-#mainFrame {
-    padding: 5vmin;
-    width: fit-content;
-    margin-left: auto;
-    margin-right: auto;
-    background-color:#0d47a1;
-    border-radius: 5vmin;
+.mainFrame {
+    background-color:  rgba(144, 144, 144, 0.2);
+    padding: 3%;
+    border-radius: 30px;
+    padding: 3vmin;
+    margin-top: 3vmin;
+    margin-left: 8em;
+    margin-right: 8em;
 }
 
 input{
     width: 100%;
     height: 30pt;
     margin-bottom: 2vmin;
-    border: solid whitesmoke 1px;
     border-radius: 30px;
     padding: 2vmin;
-    font-size: 15pt;
-    background-color: rgba(245, 245, 245, 0.1);
-    color: whitesmoke;
+    font-size: 15pt;  
 }
 
 input::placeholder{
@@ -66,11 +63,9 @@ input::placeholder{
 
 button{
     font-size: 15pt;
-    height: 30pt;
-    border: solid whitesmoke 1px;
-    color: whitesmoke;
-    background-color: rgba(245, 245, 245, 0.1);
-    border-radius: 30px;
+    border: solid #0d47a1 1px;
+    color: #0d47a1;
+    border-radius: 25px;
     padding-left: 10pt;
     padding-right: 10pt;
     text-align: center;
@@ -78,9 +73,11 @@ button{
 }
 
 button:hover {
-    background-color: whitesmoke;
-    color: black;
+    background-color: #0d47a1 ;
+    color: whitesmoke;
+    border-color: whitesmoke;
 }
+ 
 
 #passerr{
     font-size: 13pt;
@@ -98,4 +95,19 @@ button:hover {
 .page-title {
     color: #0d47a1;
     font-size: 2.5em
+}
+
+::ng-deep .mat-focused .mat-form-field-label {
+    /*change color of label*/
+    color:  #0d47a1 !important;
+   }
+  
+::ng-deep.mat-form-field-underline {
+/*change color of underline*/
+background-color:  #0d47a1 !important;
+} 
+
+::ng-deep.mat-form-field-ripple {
+/*change color of underline when focused*/
+background-color:  #0d47a1 !important;;
 }
