--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -19,21 +19,33 @@
             </div>
         </div>
     </div>
-    <div id="mainFrame">
-        <h1></h1>
-        <form id="account">
-            <input type="email" id="email" placeholder="ieee@itba.edu.ar"><br>
-            <input type="password" id="pass" placeholder="*****"><br>
-            <div class="d-flex justify-content-center"><button id="login">Log In</button></div>
-            
-            <h4 id="passerr" [hidden]="isHidden"></h4>
-        </form>
-        <br><br>
-        <h3>
-            Forgot Password?
-            <br>
-            <a href="">Click here.</a>
-        </h3>
+    <div class="mainFrame">
+
+        <div class="row d-flex justify-content-center">
+            <form id="account">
+                <div>
+                    <mat-form-field class="example-full-width" style="width:50vw">
+                        <mat-label for="email">Email</mat-label>
+                        <input type="email" id="email" placeholder="ieee@itba.edu.ar" required matInput>
+                    </mat-form-field>
+                </div>
+                <div>                
+                    <mat-form-field class="example-full-width" style="width:50vw">
+                        <mat-label for="pass">Password</mat-label>
+                        <input type="email" id="pass" placeholder="*****" required matInput>
+                    </mat-form-field>
+                </div>
+                <div class="d-flex justify-content-center"><button id="login">Log In</button></div>
+                
+                <h4 id="passerr" [hidden]="isHidden"></h4>
+            </form>
+        </div>
+
+        <div class="row d-flex justify-content-center mt-5">
+            <h4>Don't have an account yet?</h4>
+            <a class="ml-2" href="/register">Sign Up</a>
+        </div>
+      
     </div>
 </body>
 </html>
