updated ieeextreme names

--- a/src/app/ieeextreme/ieeextreme.component.html
+++ b/src/app/ieeextreme/ieeextreme.component.html
@@ -78,12 +78,6 @@
             <div class="row">
               <div class="col-sm">
                 <div class="sponsorContact">
-                  <h3>Franco Moriconi</h3>
-                  <a href="mailto:fmoriconi@itba.edu.ar" class="whiteLink">fmoriconi@itba.edu.ar</a>
-                </div>
-              </div>
-              <div class="col-sm">
-                <div class="sponsorContact">
                   <h3>Ariel Nowik</h3>
                   <a href="mailto:anowik@itba.edu.ar" class="whiteLink">anowik@itba.edu.ar</a>
                 </div>
@@ -96,8 +90,8 @@
               </div>
               <div class="col-sm">
                 <div class="sponsorContact">
-                  <h3>Gonzalo Rímini Carol</h3>
-                  <a href="mailto:grimini@itba.edu.ar" class="whiteLink">grimini@itba.edu.ar</a>
+                  <h3>Olivia De Vincenti</h3>
+                  <a href="mailto:odevincenti@itba.edu.ar" class="whiteLink">odevincenti@itba.edu.ar</a>
                 </div>
               </div>
             </div>
