<internal>: small input type change

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -7,7 +7,7 @@
 </head>
 
 <header>
-  
+
   </header>
 <body>
     <div class="topbottomLine pt-2 pb-2 mb-4 text-center" id="home">
@@ -26,17 +26,17 @@
                 <div>
                     <mat-form-field class="example-full-width" style="width:50vw">
                         <mat-label for="email">Email</mat-label>
-                        <input type="email" id="email" placeholder="ieee@itba.edu.ar" required matInput>
+                        <input type="email" id="email" placeholder="mail@itba.edu.ar" required matInput>
                     </mat-form-field>
                 </div>
-                <div>                
+                <div>
                     <mat-form-field class="example-full-width" style="width:50vw">
                         <mat-label for="pass">Password</mat-label>
-                        <input type="email" id="pass" placeholder="*****" required matInput>
+                        <input type="password" id="pass" placeholder="*********" required matInput>
                     </mat-form-field>
                 </div>
                 <div class="d-flex justify-content-center"><button id="login">Log In</button></div>
-                
+
                 <h4 id="passerr" [hidden]="isHidden"></h4>
             </form>
         </div>
@@ -45,7 +45,7 @@
             <h4>Don't have an account yet?</h4>
             <a class="ml-2" href="/register">Sign Up</a>
         </div>
-      
+
     </div>
 </body>
 </html>
