--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -18,11 +18,11 @@
   <div class="row d-flex justify-content-center">
     <div>
       <div class="mainFrame">
-        
+
         <div class="row">
         <form id="singup-form">
-          
-          
+
+
             <div class="inputField">
               <mat-form-field class="example-full-width" style="width:50vw">
                 <mat-label for="fname">First Name:</mat-label>
@@ -59,7 +59,7 @@
                 <div class=" row d-flex justify-content-center">
                   <button type="submit">Sign Up</button>
                 </div>
-               
+
               </div>
             </div>
 
@@ -68,7 +68,7 @@
             </div>
             <div class="row d-flex justify-content-center mt-4">
               <!--<div class="mr-2 blue-font">Forgot Password?</div>
-              
+
               <button class="smallbutton" (click)="chgpass()">Change Password</button>
 
               <mat-form-field id="changepass" class="example-full-width" style="width:50vw">
@@ -84,13 +84,13 @@
 
 
             <div class="row d-flex justify-content-center mt-4">
-              <div class="mr-2 blue-font">Already Singed Up?</div>
+              <div class="mr-2 blue-font">Already Signed Up?</div>
               <button class="smallbutton" [routerLink]="['/login']">Log In</button>
             </div>
         </form>
         </div>
       </div>
     </div>
-  </div>  
+  </div>
 </body>
 </html>
