--- a/src/app/contact-page/contact-page.component.html
+++ b/src/app/contact-page/contact-page.component.html
@@ -13,11 +13,14 @@
 <body>
     <section id="contact">
 
-      <div class="topbottomLine pt-2 pb-2 mb-4 text-center" id="home">
+      <div class="topbottomLine pt-2 pb-2 mb-4" id="home">
         <div class="container">
             <div class="row">
-                <div class="col-sm pt-1 pb-1" >
-                    <h1 class="page-title">{{ 'NAVBAR.CONTACT' | translate }}</h1>
+                <div class="col-md-5 col-sm-12 pt-1 pb-1 flexImage" >
+                  <img src="../../assets/image/IEEEContactos.png" alt="Contact" class="IEEEContactImage">
+                </div>
+                <div class="col-md-7 col-sm-12 pt-1 pb-1 flexText" >
+                  <h1 class="page-title">{{ 'NAVBAR.CONTACT' | translate }}</h1>
                 </div>
             </div>
         </div>
