--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -13,20 +13,25 @@
 </header>
 
 <body>
+  
+  <div class="topbottomLine pt-2 pb-2 mb-4" id="home">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-5 col-sm-12 pt-1 pb-1 flexImage" >
+              <img src="../../assets/image/IEEEEventos2.png" alt="Events" class="IEEEEventsImage">
+            </div>
+            <div class="col-md-7 col-sm-12 pt-1 pb-1 flexText" >
+              <h1 class="page-title">{{ 'NAVBAR.EVENTS' | translate }}</h1>
+            </div>
+        </div>
+    </div>
+  </div>
     <div class="row mr-5 ml-5 d-flex justify-content-center row-eq-height">
 
         <!-- Eventos (material angular) -->
 
-  <div class="bottomLine">
-    <div class="topbottomLine pt-2 pb-2 mb-4 text-center" id="home">
-      <div class="container">
-          <div class="row">
-              <div class="col-sm pt-1 pb-1" >
-                  <h1 class="page-title">{{ 'NAVBAR.EVENTS' | translate }}</h1>
-              </div>
-          </div>
-      </div>
-    </div>
+
+
 
     <div class="card-group-row">
       <div class="card-group-col">
@@ -75,7 +80,6 @@
 
     </div>
 
-  </div>
     </div>
 
     <app-footer></app-footer>
