--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -29,7 +29,7 @@
         <div class="row news-header">
           <div class="col news-logo">
             <a class="link-text" [routerLink]="['/noticias']">
-              <img src="assets/image/IEEENews3.png" class="news-logo">
+              <img src="assets/image/IEEENews_sin_fondo.png" class="news-logo">
               <h3 class="news-container-title">{{ 'HOME.IEEENEWS.TITLE' | translate }}</h3>
             </a>
           </div>
