--- a/src/app/noticias/noticias.component.html
+++ b/src/app/noticias/noticias.component.html
@@ -11,17 +11,21 @@
 </header>
 
 <body>
+    
     <div class="body" fxLayoutAlign="center center" fxLayout="column">
 
-        <div class="topbottomLine pt-2 pb-2 mb-4 text-center" id="home">
+        <div class="topbottomLine pt-2 pb-2 mb-4" id="home">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm pt-1 pb-1" >
-                        <h1 class="page-title">{{ 'NAVBAR.NEWS' | translate }}</h1>
+                    <div class="col-md-5 col-sm-12 pt-1 pb-1 flexImage" >
+                      <img src="../../assets/image/IEEENews_sin_fondo.png" alt="News" class="IEEENoticiasImage">
+                    </div>
+                    <div class="col-md-7 col-sm-12 pt-1 pb-1 flexText" >
+                      <h1 class="page-title">{{ 'NAVBAR.NEWS' | translate }}</h1>
                     </div>
                 </div>
             </div>
-        </div>
+          </div>
 
         <div *ngIf="showLoadingSpinner">
             <app-loading-spinner></app-loading-spinner>
