--- a/src/app/sponsors/sponsors.component.html
+++ b/src/app/sponsors/sponsors.component.html
@@ -12,15 +12,19 @@
 
 <body>
 
-    <div class="topbottomLine pb-2 mb-5" id="home">
+
+    <div class="topbottomLine pt-2 pb-2 mb-4" id="home">
         <div class="container">
             <div class="row">
-                <div class="col-sm pt-1 pb-1" >
-                    <h1 class="page-title">{{ 'NAVBAR.SPONSORS' | translate }}</h1>
+                <div class="col-md-5 col-sm-12 pt-1 pb-1 flexImage" >
+                  <img src="../../assets/image/IEEESponsors.png" alt="Sponsors" class="IEEESponsorsImage">
+                </div>
+                <div class="col-md-7 col-sm-12 pt-1 pb-1 flexText" >
+                  <h1 class="page-title">{{ 'NAVBAR.SPONSORS' | translate }}</h1>
                 </div>
             </div>
         </div>
-    </div>
+      </div>
 
     <mat-tab-group class="mt-5 group-margin">
         <mat-tab label="2020">
