--- a/src/app/mainpage/mainpage.component.css
+++ b/src/app/mainpage/mainpage.component.css
@@ -4,11 +4,12 @@ html {
 }
 
 body {
-    padding: 10% 10% 0 10%;
+    padding: 2% 10% 0 10%;
     background: rgb(255, 255, 255);
     background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
     background-size: cover;
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    padding-top: 70px;
 }
 
 .whiteRoundedBlock{
@@ -216,7 +217,7 @@ h2{
 
 .max-width{
      width: 100%;
-    height: 26em;
+    height: 20em;
 }
 
 /* Bottom left text */
@@ -252,9 +253,3 @@ h2{
 
 /* Flex */
 
-@media (max-width: 950px) {
-    body {
-        padding-top: 20%;
-    }
-
-}
