--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -13,20 +13,19 @@
 
 <body>
 
-    <div class="d-flex align-items-center justify-content-center">
-        <div class="containerTitle">
-            <div class="topbottomLine pt-2 pb-2 mb-4 text-center" id="home">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm pt-1 pb-1" >
-                            <h1 class="page-title">{{ 'NAVBAR.TEAM' | translate }}</h1>
-                        </div>
-                    </div>
+
+    <div class="topbottomLine pt-2 pb-2 mb-4 text-center" id="home">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5 col-sm-12 pt-1 pb-1 flexImage" >
+                  <img src="../../assets/image/IEEETeams.png" alt="Team" class="IEEETeamImage">
+                </div>
+                <div class="col-md-7 col-sm-12 pt-1 pb-1 flexText" >
+                  <h1 class="page-title">{{ 'NAVBAR.TEAM' | translate }}</h1>
                 </div>
             </div>
         </div>
-    </div>
-    
+      </div>
 
     <div class="mt-5 mr-5 ml-5">
 
