--- a/src/app/loading-spinner/loading-spinner.component.css
+++ b/src/app/loading-spinner/loading-spinner.component.css
@@ -19,7 +19,7 @@
     display: block;
     width: 25%;
     height: 25%;
-    background-color: #fff;
+    background-color: rgb(0, 0, 0);
     border-radius: 100%;
     animation: sk-chase-dot-before 2.0s infinite ease-in-out both; 
   }
@@ -70,7 +70,7 @@
     width: 7px;
     height: 7px;
     border-radius: 50%;
-    background: #fff;
+    background: rgb(0, 0, 0);
     margin: -4px 0 0 -4px;
   }
   .lds-roller div:nth-child(1) {
