--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -35,6 +35,11 @@
           translate
           }}</button>
       </li>
+      <li class="nav-item" *ngIf="journalist">
+        <button onclick="window.location.href = '/write-news'" class="buttonNavbar" type="button">{{ 'NAVBAR.WRITENEWS' |
+          translate
+          }}</button>
+      </li>
     </ul>
 
     <!-- Icons on right -->
