deployed navbar news title

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -36,9 +36,7 @@
           }}</button>
       </li>
       <li class="nav-item" *ngIf="journalist">
-        <button onclick="window.location.href = '/write-news'" class="buttonNavbar" type="button">{{ 'NAVBAR.WRITENEWS' |
-          translate
-          }}</button>
+        <button onclick="window.location.href = '/write-news'" class="buttonNavbar" type="button">{{ 'WRITE-NEW.TITLE' | translate }}</button>
       </li>
     </ul>
 
