--- a/src/app/curso-python/curso-python.component.html
+++ b/src/app/curso-python/curso-python.component.html
@@ -163,19 +163,33 @@
         </mat-card>
     </div>
 
-    <div class="bottomLine " style="margin-top: 15px">
-        <h1 class="right">Sponsor</h1>
-        <div class="container">
-            <div class="row" style="margin-top: 2vmin; margin-bottom: 4vmin">
-                <div class="col-sm">
-                    <img src="./../../assets/image/content/innovid.png" height="50vmin" alt="Logo Innovid"
-                        style="position: relative; top: 50%; transform: translateY(-50%);">
-                </div>
+    <!-- Sponsors Actuales -->
+  <div class="bottomLine mt-4">
+    <div class="row">
+      <h1 class="section-title">Sponsors</h1>
 
+      <br>
+
+      <div class="container">
+        <div class="row">
+            <div class="col-sm sponsors">
+                <img src="assets/image/content/innovid.png" height="35vmin" alt="Logo Innovid"
+                    style="position: relative; top: 50%; transform: translateY(-50%);">
             </div>
-
+            <div class="col-sm sponsors">
+                <img src="assets/image/content/jpmorgan.png" height="80vmin" alt="Logo JP Morgan"
+                    style="position: relative; top: 50%; transform: translateY(-50%);">
+            </div>
+            <div class="col-sm sponsors">
+              <img src="./../../assets/image/content/eiwa.png" height="80vmin" alt="Logo Eiwa"
+                style="position: relative; top: 50%; transform: translateY(-50%);">
+            </div>
         </div>
+      </div>
+
+
     </div>
+  </div>
     <app-footer></app-footer>
 
 </body>
