--- a/src/app/curso-python/curso-python.component.html
+++ b/src/app/curso-python/curso-python.component.html
@@ -122,7 +122,7 @@
     </div>
 
     <!-- Consultas -->
-    <div>
+   <!-- <div>
 
         <mat-card style="margin-top: 15px">
             <mat-card-header>
@@ -160,6 +160,18 @@
                 </div>
 
             </mat-card-content>
+        </mat-card>
+    </div>
+-->
+
+    <div>
+        <mat-card>
+            <div class="d-flex justify-content-center align-items-center">
+            <button class="goback-button">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSejjpuBKMdk6S4I1_IGi6TkIMdD1A41Y1axRAiyFj_Fj4tApQ/closedform"> 
+                    {{ 'PYTHONCOURSES.ENROLLBUTTON' | translate }} </a>
+            </button>
+        </div>
         </mat-card>
     </div>
 
